# .dotfiles

./: .gitignore  .gitmodules  Brewfile  KeyboardMaestroMacros.kmsync  README.md  _home.nix  alacritty.yml  aliases  bash_profile  bashrc  blerc  coc-settings.json  colors.sh  com.googlecode.iterm2.plist  common.nix  config.fish  config_bash-it.sh  desktop.nix  ett  fish-3.6.1.tar.xz  fish-3.7.1.tar.xz  fish_plugins  gitignore  ideavimrc  install.conf.yaml  kitty-theme.conf  kitty.conf  kitty.conf.bak  p10k.zsh  pi-setup.sh  proxy_configurer  set_shell.sh  setup_bash-it.sh  setup_ble.sh  setup_centos  setup_common.sh  setup_dotfiles  setup_linux  setup_linux.sh  setup_mac.sh  (+9 more)
alacritty/: alacritty.toml  alacritty.yml
fish/: config.fish  fish_plugins  fish_variables  hg.fish
fish/completions/: alacritty.fish
fish/functions/: bg_func.fish  fish_surround_iW.fish  fish_surround_line.fish  fish_user_key_bindings.fish  fzf_select_from_rerun_command_output.fish  gs.fish  reorder_windows.fish  toggle.fish
karabiner/: karabiner.json
karabiner/assets/complex_modifications/: custom-right-alt-command.json  custom-right-command.json  custom-shift.json
karabiner/automatic_backups/: karabiner_20200813.json  karabiner_20201218.json  karabiner_20201219.json  karabiner_20201220.json  karabiner_20210120.json  karabiner_20210126.json
mise/: config.toml
nvim/: init.lua  lazy-lock.json
nvim/ftplugin/: fish.lua  go.lua  java.lua  markdown.lua  zsh.lua
nvim/lua/: keymaps.lua  lazy-plugins.lua  lsp_config.lua  options.lua  plugins.lua
nvim/lua/custom/: keymaps.lua
nvim/lua/custom/plugins/: abolish.lua  cursorword.lua  debugprint.lua  flash.lua  hydra.lua  init.lua  move.lua  multicursor.lua  oil.lua  operators.lua  osc52.lua  signify.lua  telescope.lua  text-case.lua  tmux.lua  treesitter-context.lua  treesj.lua
nvim/lua/kickstart/plugins/: tokyonight.lua
nvim/plugin/: packer_compiled.lua
parallel/: CITATION.cff  CREDITS  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  config.h  config.status  configure  configure.ac
parallel/src/: Makefile  Makefile.am  Makefile.in  env_parallel  env_parallel.1  env_parallel.ash  env_parallel.bash  env_parallel.csh  env_parallel.dash  env_parallel.fish  env_parallel.html  env_parallel.ksh  env_parallel.mksh  env_parallel.pdksh  env_parallel.pod  env_parallel.rst  env_parallel.sh  env_parallel.tcsh  env_parallel.texi  env_parallel.zsh  niceload  niceload.1  niceload.html  niceload.pod  niceload.rst  niceload.texi  parallel.1  parallel.html  parallel.pod  parallel.rst  parallel.texi  parallel_alternatives.7  parallel_alternatives.html  parallel_alternatives.pod  parallel_alternatives.rst  parallel_alternatives.texi  parallel_book.7  parallel_book.html  parallel_book.pod  parallel_book.rst  (+45 more)
